--- a/test_task_4_1/build.gradle
+++ b/test_task_4_1/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
 }
 
+apply plugin: 'war'
+
 group 'company'
 version '1.0-SNAPSHOT'
 
@@ -12,13 +14,19 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-
     // https://mvnrepository.com/artifact/org.postgresql/postgresql
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
 
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.3.1.Final'
 
+    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '5.0.7.RELEASE'
 
+    // https://mvnrepository.com/artifact/javax.servlet/jstl
+    compile group: 'javax.servlet', name: 'jstl', version: '1.2'
+}
+
+war {
+    archiveName = 'company.war'
 }
